--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "node": "10.15.3"
   },
   "dependencies": {
+    "ejs": "2.6.1",
     "express": "4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "1.18.11"
   }
 }
