--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "ejs": "2.6.1",
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "express-session": "1.16.1",
+    "socket.io": "2.2.0"
   },
   "devDependencies": {
     "nodemon": "1.18.11"
