--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "node": "10.15.3"
   },
   "dependencies": {
-    "ejs": "2.6.1",
-    "express": "4.16.4",
-    "express-session": "1.16.1",
-    "socket.io": "2.2.0"
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "1.18.11"
+    "nodemon": "^1.18.11"
   }
 }
